# cpp_42

./: .gitignore
module00/: CMakeLists.txt
module00/ex00/: Makefile  megaphone.cpp
module00/ex01/: Contact.class.cpp  Contact.class.hpp  Makefile  Phonebook.class.cpp  Phonebook.class.hpp  my_cool_phonebook.cpp
module01/: CMakeLists.txt
module01/ex00/: Pony.cpp  Pony.hpp  main.cpp
module01/ex01/: ex01.cpp
module01/ex02/: Zombie.cpp  Zombie.hpp  ZombieEvent.cpp  ZombieEvent.hpp  main.cpp
module01/ex03/: Zombie.cpp  Zombie.hpp  ZombieHorde.cpp  ZombieHorde.hpp  main.cpp
module01/ex04/: ex04.cpp
module01/ex05/: Brain.cpp  Brain.hpp  Human.cpp  Human.hpp  main.cpp
module01/ex06/: HumanA.cpp  HumanA.hpp  HumanB.cpp  HumanB.hpp  Weapon.cpp  Weapon.hpp  main.cpp
module01/ex07/: Makefile  main.cpp  test1  test2  test3
module02/: CMakeLists.txt
module02/ex00/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
module02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
module03/: CMakeLists.txt
module03/ex00/: FragTrap.cpp  FragTrap.hpp  main.cpp
module03/ex01/: FragTrap.cpp  FragTrap.hpp  ScavTrap.cpp  ScavTrap.hpp
module03/ex02/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  ScavTrap.cpp  ScavTrap.hpp  main.cpp
module03/ex03/: FragTrap.cpp  NinjaTrap.hpp  ScavTrap.cpp  main.cpp
module03/ex04/: ClapTrap.cpp  ClapTrap.hpp  FragTrap.cpp  FragTrap.hpp  NinjaTrap.cpp  NinjaTrap.hpp  ScavTrap.cpp  ScavTrap.hpp  SuperTrap.cpp  SuperTrap.hpp  main.cpp
module04/: CMakeLists.txt
module04/ex00/: Peon.cpp  Peon.hpp  Sorcerer.cpp  Sorcerer.hpp  Victim.cpp  Victim.hpp  main.cpp
module04/ex01/: AWeapon.cpp  AWeapon.hpp  Character.cpp  Character.hpp  Enemy.cpp  Enemy.hpp  PlasmaRifle.cpp  PlasmaRifle.hpp  PowerFist.cpp  PowerFist.hpp  RadScorpion.cpp  RadScorpion.hpp  SuperMutant.cpp  SuperMutant.hpp  main.cpp
module04/ex02/: AssaultTerminator.cpp  AssaultTerminator.hpp  ISpaceMarine.hpp  ISquad.hpp  Squad.cpp  Squad.hpp  TacticalMarine.cpp  TacticalMarine.hpp  main.cpp
module04/ex03/: AMateria.cpp  AMateria.hpp  Character.cpp  Character.hpp  Cure.cpp  Cure.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.cpp  Ice.hpp  MateriaSource.cpp  MateriaSource.hpp  main.cpp
module05/: CMakeLists.txt
module05/ex00/: Bureaucrat.cpp  Bureaucrat.hpp  main.cpp
module05/ex01/: Bureaucrat.cpp  Bureaucrat.hpp  Form.cpp  Form.hpp
module05/ex02/: AForm.cpp  AForm.hpp  Bureaucrat.cpp  Bureaucrat.hpp  PresidentialPardonForm.cpp  PresidentialPardonForm.hpp  RobotomyRequestForm.cpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.cpp  ShrubberyCreationForm.hpp  main.cpp
module05/ex03/: AForm.hpp  Bureaucrat.cpp  Intern.cpp  Intern.hpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  main.cpp
module06/: CMakeLists.txt
module06/ex00/: Caster.cpp  Caster.hpp  Makefile  a.out  main.cpp
module06/ex01/: Makefile  main.cpp  serialize
module06/ex02/: Makefile  main.cpp
module07/: CMakeLists.txt
module07/ex00/: Makefile  whatever.cpp
module07/ex01/: Makefile  iter.cpp
module07/ex02/: Array.tpp  Makefile  main.cpp
module08/: CMakeLists.txt
module08/ex00/: easyfind.hpp  main.cpp
module08/ex01/: Span.cpp  Span.hpp  main.cpp
module08/ex02/: MutantStack.cpp  MutantStack.hpp  main.cpp
